--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <p id="desc"></p>
         <p id="humidity"></p>
         <p id="wind"></p>
+        <p id="aqi"></p>
     </div>
 
     <h3>5-Day Forecast</h3>
